@@ -15,4 +15,5 @@ public interface ITextViewListener {
 	public void onGapDragged(String gapId);
 	public void onGapStopped(String gapId);
 	public void onGapDropped(String id);
+	public void onKeyAction(String gapId, Element element);
 }
