@@ -299,6 +299,7 @@
 	"text_module_gap_type" : "Gap type",
 	"text_module_gap_width" : "Gap width",
 	"text_module_gap_max_length" : "Gap max length",
+	"text_module_value_type" : "Value type",
 	"is_activity" : "Is&nbsp;activity",
 	"is_disabled" : "Is&nbsp;disabled",
 	"randomOrder" : "Random&nbsp;Order",
