@@ -1,3 +1,4 @@
+2015-12-09 Added new property Value type in Text module
 2015-12-08 Added Time measurement feature to Player
 2015-12-08 Added rulers handling
 2015-12-08 Fixed issue with draggable gaps with LaTeX in Text module
